# stsc3

./: .gitignore  .gitlab-ci.yml  Makefile  README  README.md  cabal.project  stsc3.cabal
.github/workflows/: ci.yml
Language/Smalltalk/: ANSI.hs  Ansi.hs  FileOut.hs  Organisation.hs  Parser.hs  SOM.hs  Som.hs
cgi-bin/: Makefile  README  README.md  stc-to-js-cgi.py  stc-to-js.hs  stc-to-st-cgi.py  stc-to-st.hs  stsc3-cgi.py
cmd/: Interpreter.hs  Makefile  README  js-to-stc.hs  stc-to-js.hs  stc-to-js.sh  stc-to-sc.sh  stc-to-scm.sh  stc-to-st-pfm.hs  stc-to-st.hs  stc-to-st.sh  stsc3.cabal  stsc3.hs
cmd/Interpreter/Lisp/: Ansi.hs  Common.hs  Direct.hs  Expr.hs
cmd/Interpreter/Som/: Core.hs  Int.hs  Primitives.hs  Ref.hs  Repl.hs  Str.hs  Sym.hs  Tbl.hs  Types.hs  Vec.hs
doc/sc/: Local Controls.help.sl  Sc Help Index.help.sl  Small Hours.help.sl  Terse Guide.help.sl  Texture Programs.help.sl
emacs/: stc.el  stsc3.el
help/: README  jmcc-analog-bubbles.st  stsc3.help.st  stsc3.help.stc  stsc3.st
help/collect/: An.sl  Bb.sl  Coc.sl  Dcm - Insect ambience.sl  F0 - Variations.sl  Jl - Variations.sl  Jmcc - Variations.sl  Jmcc - Xy scope.sl  Ljp.sl  Lnu - Losers Union.sl  Mk.sl  Nc.sl  Nh - Variations.sl  Nv - Variations.sl  Rd - Variations.sl  Sc 140.sl  Tm881.sl  Tmm881 - 5296.sl  Tmm881 - 6452.sl  coc.sl  ljp.sl  nc-tutorial.sl
help/collects/: coc.sl  coc.stc  ljp.sl  ljp.stc  nc-tutorial.sl  nc-tutorial.stc  tm881.stc
help/expr/: README  expr.sc  expr.st  extensions.sc  library.sc
help/graph/: Adc - 8.1 Schroeder reverb.sl  Adc - Bit reduction.sl  Adc - Down sample.sl  Adc - Down sample.st  An - Tw 1529413845231587328.sl  Bb - Differencetones.sl  Bb - Laconicism.sl  Bb - Thx.sl  Bb - Tw 5430344275.sl  Bb - Tw.sl  Bz - 1 5cZ.sl  Bz - 1 5eo.sl  Cbe - 6230.sl  Cg - Tw 1529205337013854208.sl  Cg - Tw 1529852033251033088.sl  Ck - Tw 656913884440301568.sl  Cl - Prepared piano.sl  Cr - Lucier.sl  Dm - Shift register.sl  Dm - Shift register.st  Dmc - Pm crotale.sl  Ds - Tw 19.sl  Ds - Tw 22.sl  Dst - 1 5fc.sl  Es - Tw 435684664200540161.sl  Es - Tw 570012853274615808.sl  Es - Tw 570012853274615808.st  Es - Tw 600429640600186880.sl  F0 - 1 4Q6.sl  F0 - 2002 08 17.sl  F0 - 2012 04 19.sl  F0 - 2020 12 11.sl  F0 - Pkt 00.sl  F0 - Pkt 00.st  F0 - Pkt 07.sl  F0 - Pkt 26.sl  F0 - Pkt 28.sl  F0 - Red frik.sl  F0 - Tw 0001.sl  F0 - Tw 0002.sl  (+1065 more)
help/process/: README  f0-tw-0001.stc  f0-tw-0002.stc  f0-tw-0003.stc  f0-tw-0004.stc  f0-tw-0005.stc  f0-tw-0006.stc  f0-tw-0007.stc  f0-tw-0100.stc  f0-tw-0101.stc  f0-tw-0112.stc  f0-tw-0202.stc  f0-tw-0205.stc  f0-tw-0247.stc  f0-tw-0252.stc  f0-tw-0293.stc  f0-tw-1591161283591782401.stc  jmcc-alien-froggies.stc  jmcc-alien-meadow.stc  jmcc-lots-o-sines.stc  jmcc-rocks-on-rails.stc
help/sc/: !+.help.sl  !.help.sl  !^.help.sl  <!.help.sl  Abs.help.sl  AllpassC.help.sl  AllpassN.help.sl  AmpComp.help.sl  AmpDb.help.sl  Amplitude.help.sl  ArcCos.help.sl  ArcSin.help.sl  ArcTan.help.sl  AudioIn.help.sl  BLowPass.help.sl  Balance2.help.sl  Blip.help.sl  Bpf.help.sl  Bpz2.help.sl  Brf.help.sl  BrownNoise.help.sl  Brz2.help.sl  BufRd.help.sl  Ceil.help.sl  Choose.help.sl  ClipNoise.help.sl  Clock.help.sl  CoinGate.help.sl  CombC.help.sl  CombL.help.sl  CombN.help.sl  Compander.help.sl  ControlIn.help.sl  Cos.help.sl  Cosh.help.sl  CpsMidi.help.sl  CpsOct.help.sl  Crackle.help.sl  Cubed.help.sl  CuspL.help.sl  (+226 more)
help/sc2/: README.md
help/sc3/: Multichannel\ Expansion.help.sl  README.md
help/terse/: README  README.md  terse-wip.st  terse.hs  terse.scd  terse.st
help/texture/: Cr - Lucier.sl  F0 - Tw 0001.sl  F0 - Tw 0002.sl  F0 - Tw 0003.sl  F0 - Tw 0004.sl  F0 - Tw 0005.sl  F0 - Tw 0006.sl  F0 - Tw 0007.sl  F0 - Tw 0100.sl  F0 - Tw 0101.sl  F0 - Tw 0112.sl  F0 - Tw 0202.sl  F0 - Tw 0205.sl  F0 - Tw 0247.sl  F0 - Tw 0252.sl  F0 - Tw 0293.sl  F0 - Tw 1591161283591782401.sl  F0 - Tw 1631979082622566400.sl  Jmcc - Alien froggies.sl  Jmcc - Alien meadow.sl  Jmcc - Birdies.sl  Jmcc - Blips 001.sl  Jmcc - Bouncing objects.sl  Jmcc - Bowed garage door springs.sl  Jmcc - Cfstring.sl  Jmcc - Choip.sl  Jmcc - Clustered sines.sl  Jmcc - Comb delay sweeps.sl  Jmcc - Contamination zone.sl  Jmcc - Coolant.sl  Jmcc - Cymbalism accelerando.sl  Jmcc - Cymbalism.sl  Jmcc - Data space.sl  Jmcc - Deep trip.sl  Jmcc - Dragtokeyboard.sl  Jmcc - Early space music Lp - Side one.sl  Jmcc - Early space music Lp, Side one.sl  Jmcc - Hard sync sawtooth with lfo.sl  Jmcc - Hell is busy.sl  (+146 more)
hs/: help.hs  jmcc.hs  md.hs  mk.hs  pseudo.hs
html/: stc-to-js.html  stc-to-st.html  stsc3.html
js/: README  graph-menu.html  help-menu.html  sc3-array.js  sc3-bindings.js  sc3-event.js  sc3-graphs.js  sc3-module.js  sc3-operators.js  sc3-pseudo.js  sc3-ui.js  sc3-wasm.html  sc3-wasm.js  sc3-ws.js  sc3.css  sc3.html  sc3.js  stc-as-stc-st.js  stc-as-stc.js  stc-common.js  stc-grammar-st.js  stc-grammar.js  stc-ohm.js  stc-test.js
md/: announce.md  c-smalltalk.md  fonts.md  library.text  notes.md  protocols.md  stsc3.md  ugens.md  video.md
mk/: som.mk
sc/: FilterConstructors.sc  FilterMethods.sc  ImplicitRateConstructors.sc  Operator.sc  OscillatorMethods.sc  Pseudo.sc  README  Reordering.sc  RewriteRate.sc  RuleExceptions.sc  Scalar.sc  stsc3.quark
som/: BinaryOpUgen.som  Control.som  EnvAdsr.som  EnvAsr.som  EnvBuilder.som  EnvLinen.som  EnvPerc.som  EnvSine.som  EnvSpec.som  EventParam.som  Makefile  README.md  Rate.som  Sc3.som  ScGraph.som  ScUgen.som  Ugen.ext.som  Ugen.som  UgenBuilder.som  UnaryOpUgen.som  Voicer.som
st/: ADSR.st  ASR.st  AbstractUgen.st  Array.ext.st  AudioIn.st  BinaryOpUgen.st  BlockClosure.ext.st  Boolean.ext.st  BufAlloc.st  BufRec.st  Cc.st  Changed.st  Choose.st  Collection.ext.st  Constant.st  Control.st  ControlIn.st  Cutoff.st  Dictionary.ext.st  DmdFor.st  DmdOn.st  DynKlank.st  Env.st  EnvADSR.st  EnvASR.st  EnvAdsr.st  EnvAsr.st  EnvBuilder.st  EnvLinen.st  EnvPerc.st  EnvSine.st  EnvSpec.st  EventParam.st  False.ext.st  Float.ext.st  Fraction.ext.st  InFb.st  Integer.ext.st  Interval.ext.st  KeyDown.st  (+129 more)
stc/: Pseudo.lib.stc
(+1753 files in other folders)
