Cabal-Version:      2.4
Name:               stsc3
Version:            0.20
Synopsis:           Smalltalk SuperCollider
Description:        Smalltalk SuperCollider
License:            GPL-3.0-only
Category:           Sound
Copyright:          (c) Rohan Drape, 2019-2022
Author:             Rohan Drape
Maintainer:         rd@rohandrape.net
Stability:          Experimental
Homepage:           http://rohandrape.net/t/stsc3
Tested-With:        GHC == 8.8.4
Build-Type:         Simple

Data-files:         README.md

library
  build-depends:        array,
                        base >= 4.7 && < 5,
                        filepath,
                        hmt-base == 0.20.*,
                        parsec,
                        split
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-tabs
  build-tool-depends:   alex:alex,
                        happy:happy
  exposed-modules:      Language.Smalltalk.Ansi,
                        Language.Smalltalk.Ansi.Annotate,
                        Language.Smalltalk.Ansi.Expr,
                        Language.Smalltalk.Ansi.Expr.Print,
                        Language.Smalltalk.Ansi.Fold,
                        Language.Smalltalk.Ansi.Parser,
                        Language.Smalltalk.Ansi.Print,
                        Language.Smalltalk.Ansi.Print.SuperCollider,
                        Language.Smalltalk.Ansi.Lexer,
                        Language.Smalltalk.Ansi.Query,
                        Language.Smalltalk.Ansi.Rewrite,
                        Language.Smalltalk.Ansi.Token,
                        Language.Smalltalk.FileOut,
                        Language.Smalltalk.Som,
                        Language.Smalltalk.SuperCollider.Ast,
                        Language.Smalltalk.SuperCollider.Ast.Print,
                        Language.Smalltalk.SuperCollider.Lexer,
                        Language.Smalltalk.SuperCollider.Ndef,
                        Language.Smalltalk.SuperCollider.Parser,
                        Language.Smalltalk.SuperCollider.Rewrite,
                        Language.Smalltalk.SuperCollider.Rewrite.Keyword,
                        Language.Smalltalk.SuperCollider.Rewrite.Precedence,
                        Language.Smalltalk.SuperCollider.Rewrite.Temporaries,
                        Language.Smalltalk.SuperCollider.Token,
                        Language.Smalltalk.SuperCollider.Translate

executable stc-to-js
  build-depends:    base >= 4.8 && < 5,
                    stsc3
  hs-source-dirs:   cmd
  main-is:          stc-to-js.hs
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-orphans -fwarn-tabs -threaded

Source-Repository   head
  Type:             git
  Location:         https://gitlab.com/rd--/stsc3/
