Cabal-Version:      2.4
Name:               stsc3
Version:            0.21
Synopsis:           Smalltalk SuperCollider
Description:        Smalltalk SuperCollider
License:            GPL-3.0-only
Category:           Sound
Copyright:          (c) Rohan Drape, 2019-2023
Author:             Rohan Drape
Maintainer:         rd@rohandrape.net
Stability:          Experimental
Homepage:           http://rohandrape.net/t/stsc3
Tested-With:        GHC == 9.8.1
Build-Type:         Simple

Data-files:         README.md

library
  build-depends:        array,
                        base >= 4.7 && < 5,
                        containers,
                        filepath,
                        hmt-base == 0.21.*,
                        parsec,
                        split
  default-language:     Haskell2010
  ghc-options:          -Wall -Wno-x-partial -Wno-incomplete-uni-patterns
  build-tool-depends:   alex:alex,
                        happy:happy
  exposed-modules:      Language.Smalltalk.Ansi,
                        Language.Smalltalk.Ansi.Annotate,
                        Language.Smalltalk.Ansi.Expr,
                        Language.Smalltalk.Ansi.Expr.Print,
                        Language.Smalltalk.Ansi.Fold,
                        Language.Smalltalk.Ansi.Parser,
                        Language.Smalltalk.Ansi.Print,
                        Language.Smalltalk.Ansi.Print.Som,
                        Language.Smalltalk.Ansi.Print.Stc,
                        Language.Smalltalk.Ansi.Lexer,
                        Language.Smalltalk.Ansi.Query,
                        Language.Smalltalk.Ansi.Rewrite,
                        Language.Smalltalk.Ansi.Token,
                        Language.Smalltalk.FileOut,
                        Language.Smalltalk.Organisation,
                        Language.Smalltalk.Som,
                        Language.Smalltalk.Spl.Ast,
                        Language.Smalltalk.Spl.Lexer,
                        Language.Smalltalk.Spl.Parser,
                        Language.Smalltalk.Spl.Token,
                        Language.Smalltalk.Stc.Ast,
                        Language.Smalltalk.Stc.Ast.Print,
                        Language.Smalltalk.Stc.Lexer,
                        Language.Smalltalk.Stc.Parser,
                        Language.Smalltalk.Stc.Rewrite,
                        Language.Smalltalk.Stc.Rewrite.Implicit,
                        Language.Smalltalk.Stc.Rewrite.Precedence,
                        Language.Smalltalk.Stc.Rewrite.Temporaries,
                        Language.Smalltalk.Stc.Token,
                        Language.Smalltalk.Stc.Translate
                        Language.Smalltalk.SuperCollider.Ndef,
                        Language.Smalltalk.SuperCollider.Parser

executable stsc3
  build-depends:    base >= 4.8 && < 5,
                    hmt-base == 0.21.*,
                    hsc3 == 0.21.*,
                    stsc3
  hs-source-dirs:   cmd
  main-is:          stsc3.hs
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-orphans -fwarn-tabs -threaded

executable stc-to-js
  build-depends:    base >= 4.8 && < 5,
                    stsc3
  hs-source-dirs:   cgi-bin
  main-is:          stc-to-js.hs
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-orphans -fwarn-tabs -threaded

Source-Repository   head
  Type:             git
  Location:         https://gitlab.com/rd--/stsc3/
